--- a/wreck-them/src/WreckThemBundle/Resources/config/routing.yml
+++ b/wreck-them/src/WreckThemBundle/Resources/config/routing.yml
@@ -1,3 +1,3 @@
 wreck_them_homepage:
     path:     /
-    defaults: { _controller: WreckThemBundle:Default:index }
+    defaults: { _controller: WreckThemBundle:Page:index }
