--- a/wreck-them/app/config/parameters.yml
+++ b/wreck-them/app/config/parameters.yml
@@ -2,11 +2,11 @@
 parameters:
     database_host: 127.0.0.1
     database_port: null
-    database_name: symfony
+    database_name: def
     database_user: root
     database_password: null
     mailer_transport: smtp
     mailer_host: 127.0.0.1
     mailer_user: null
     mailer_password: null
-    secret: a89fc491bb1ac345d868a5a096f85def1aa02147
+    secret: 4d5a060196fc97eb24d8fd24447fe8b76a946979
