Formulario edición de perfil

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ wreck-them/var/cache
 wreck-them/var/logs
 wreck-them/var/sessions
 wreck-them/var/bootstrap.php.cache
+wreck-them/web/bundles/framework
