Habilitando imagen de perfil y formularios

--- a/wreck-them/app/config/security.yml
+++ b/wreck-them/app/config/security.yml
@@ -14,8 +14,8 @@ security:
 #                # if you're using multiple entity managers
 #                # manager_name: customer
     access_control:
-        - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/entrar, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/*, roles: ROLE_USER }
 
