--- a/brisca/app/config/security.yml
+++ b/brisca/app/config/security.yml
@@ -9,8 +9,7 @@ security:
         - { path: ^/$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/entrar, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/registro, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/_profiler*, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-#        - { path: ^/.+, roles: ROLE_USER }
+#        - { path: ^/.+, roles: ROLE_USER } FIXME
 
 
 
